# jita

./: .gitignore  pyproject.toml
notebooks/: exploracion.ipynb  first_attempt.ipynb  llm_extract_eval.ipynb  primeros_intentos.ipynb
src/jita/ETL/: extract_casa_ley.py  extract_gas.py  extract_qqp.py  pipeline.py
src/jita/abstract_tools/: supermarket_ocr.py
src/jita/settings/: config.py  credentials.py
src/jita/tools/: OllamaOCR.py  image_segmentation.py  ollama_ocr.py  zone_detector.py
