[project]
name = "jita"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "rarfile>=4.2",
    "requests>=2.32.5",
]

[project.scripts]
jita = "jita:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
